<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Baby_Blue_Eyes"
    android:orientation="vertical"
    tools:context=".signup">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="236dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/light__1_" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="522dp"
            android:layout_height="291dp"
            app:srcCompat="@drawable/pngkey_com_user_login_png_transparent_3670570" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:layout_marginBottom="150px"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/fullnameS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginBottom="50px"
                android:ems="10"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/usernameS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginBottom="50px"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginBottom="50px">

                <RadioButton
                    android:id="@+id/maleS"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleS"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <EditText
                android:id="@+id/emailS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginBottom="50px"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/passwordS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginBottom="50px"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginBottom="25px"
                android:clickable="true"
                android:linksClickable="true"
                android:minHeight="48dp"
                android:onClick="tAndCClick"
                android:text="@string/termsAndConditions" />

            <Switch
                android:id="@+id/iAgreeS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginBottom="50px"
                android:minHeight="48dp"
                android:text="@string/iAgreeTandC" />

            <Button
                android:id="@+id/signupS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginBottom="50px"
                android:text="@string/createAccount" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>